--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Resepies</h1>
+        <a href="recipes/lasagna.html">Lasagna recepie</a>
     </body>
 
 
