--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Resepies</h1>
-        <a href="recipes/lasagna.html">Lasagna recepie</a>
+        <ul>
+        <li><a href="recipes/lasagna.html">Lasagna recepie</a></li>
+        <li></li>
+        <li></li>
+        </ul>
     </body>
 
 
