Remade paragraphs and lists

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,17 +9,17 @@
         <img src="../pictures/lasagna image.webp" alt="Picture of a finished lasagna" height="200px" width="350px">
         <h2>Description</h2>
         <!--Both of these following paragraphs and list items are copy and pasted from this website "https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/". We need to change it before making this public-->
-        <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
+        <p>This is one of the most popular lasagna Resepies for lasagna in the Allrecipies community. This is due to the customisability of this resrecipie. John Chandler submitted the Recipe to the website more than 20 years ago.</p>
         <br>
-        <p>This lasagna recipe is incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need:</p>
+        <p>Like stated before, this lasagna recipe is incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need:</p>
         <ul>
-            <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
-            <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+            <li>Meat: sweet Italian sausage and lean ground beef.</li>
+            <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add flavor.</li>
             <li>Tomato products: You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
-            <li>Sugar: Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+            <li>Sugar: Two tablespoons of white sugar add subtle sweetness to the sause.</li>
             <li>Spices and seasonings: This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
-            <li>Lasagna noodles: Use store-bought</li>
-            <li>Cheeses: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+            <li>Lasagna noodles: Use store-bought noodles</li>
+            <li>Cheeses: Parmesan, mozzarella, and ricotta cheese.</li>
             <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
         </ul>
         <h2>step-by-step guide</h2>
@@ -44,6 +44,6 @@
         </ol>
         <br>
         <h2>How Long to Cook Lasagna</h2>
-        <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
+        <p>The lasagna should be covered with goil for 25 minutes in an oven preheated to 375 degrees F. Then another 25 minutes without the foil. Finallly let it rest in room temperature for 15 munutes before cutting into it.</p>
     </body>
 </html>
