Fix grilled cheese picture not showing

--- a/recipes/grilled_cheese.html
+++ b/recipes/grilled_cheese.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Grilled Cheese Recipe</h1>
-        <img src="../pictures/grilled cheese immage.webp" alt="Picture of a finished Grilled cheese" height="200px" width="300px">
+        <img src="../pictures/grilled_cheese_image.webp" alt="Picture of a finished Grilled cheese" height="200px" width="300px">
         <h2>Description</h2>
         <p>This is the old classic grilled cheese. A simple and easy to make sandwitch when in a pintch or in a hurry.</p>
         <br>
