--- a/recipes/other recipie.html
+++ b/recipes/other recipie.html
@@ -2,37 +2,29 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lasagna recipe</title>
+        <title>Asparagus and Eggs Recipe</title>
     </head>
     <body>
-        <h1>...Recipe</h1>
-        <img src="" alt="Picture of a finished ..." height="200px" width="350px">
+        <h1>Asparagus and Eggs Recipe</h1>
+        <img src="../pictures/egg_image.webp" alt="Picture of Asparagus and Eggs" height="200px" width="350px">
         <h2>Description</h2>
-        <p></p>
+        <p>Simple recipie for a gread breakfast or a light snack.</p>
         <br>
-        <p></p>
+        <h2>Ingredients</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>1 tablespoon olive oil</li>
+            <li>1 garlic clove, finely chopped</li>
+            <li>8 thin-stemmed asparagus stalks, trimmed</li>
+            <li>2 large eggs</li>
+            <li>salt and freshly ground black pepper to taste</li>
+            <li>1 pinch red pepper flakes (optional)</li>
         </ul>
         <h2>step-by-step guide</h2>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Heat a small skillet over medium-high heat. Add olive oil and garlic; cook and stir until garlic is fragrant, about 30 seconds.</li>
+            <li>Add asparagus and cook until fork-tender, turning asparagus often to ensure even cooking, about 4 minutes.            </li>
+            <li>Spread asparagus out and crack 2 eggs over the asparagus. Cover with lid and cook until egg whites are firm and yolk is done to desired consistency, about 4 minutes.</li>
+            <li>Season with salt and pepper; sprinkle with red pepper flakes and serve immediately.</li>
         </ol>
-        <br>
-        <br>
-        <h2>How Long to Cook ...</h2>
-        <p></p>
     </body>
 </html>
