--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Resepies</h1>
         <ul>
-        <li><a href="recipes/lasagna.html">Lasagna recepie</a></li>
-        <li></li>
-        <li></li>
+            <li><a href="./recipes/lasagna.html">Lasagna Recepie</a></li>
+            <li><a href="./recipes/grilled_cheese.html">Grilled Cheese Recepie</a></li>
+            <li><a href="./recipes/asparagus_and_eggs.html">Asparagys and Eggs Recepie</a></li>
         </ul>
     </body>
 
